Add fixes and workarounds for deploying Openstack Kilo
    ===== rebase after drop 1

    Revert 376bff91267db35117f9d5670f068f9c314ff42b for cirros upload
    Revert https://review.openstack.org/#/c/302616/1

   ======

    Change the Puppetfile to track Kilo repos

    Add conditions to the swift tasks to be included properly

    Some of the swift tasks have internal conditions to prevent
    them from running when they are not supposed to, and others do not.

    Here we add them in the tasks data so that the condtion can be more
    evenly applied to the individual tasks.

    Closes-bug: 1542092

    [9-Kilo] Fix MODULAR: rabbitmq.pp

    rabbitmq_class param needs => false to not manage rabbit config

    [9.0-Kilo] Keystone fixes to support Kilo

    Comment out passing of unsupported parameters
'vhost_custom_fragment',
    'access_log_format' to class keystone::apache::wsgi in
osnailyfacter/modular/keystone/keystone.pp

    Explicitly add Keystone API v2.0/ in auth_url (osnailyfacter's
keystone.pp)

    Comment out unsupported parameters for class ::keystone declaration
inside
    openstack::keystone

    [9.0-Kilo] Fix openstack::glance classes declarations

    Non-existent in stable/kilo branch of 'glance' module classes'
parameters were commented out

    [9.0-Kilo] Nova-related fixes to support Kilo

    Fix openstack::nova::controller and openstack::compute classes
    declarations. Non-existent parameters for classes from
    stable/kilo branch of 'nova' module were commented out

    [9.0-Kilo] Horizon fixes to support Kilo

    Fix openstack::horizon classes declarations. Non-existent class
parameter
    inside stable/kilo branch of 'horizon' module were commented ou

    Fix keystone api version for horizon.Keystone API v 2.0 should
    be used instead v3 (default for master branch)

    [9.0-Kilo] Fix openstack::cinder classes declarations

    Non-existent in stable/kilo branch of 'cinder' module
    classes' parameters were commented out

    [

--- a/deployment/puppet/osnailyfacter/modular/astute/tasks.yaml
+++ b/deployment/puppet/osnailyfacter/modular/astute/tasks.yaml
@@ -63,7 +63,7 @@
   requires: [upload_configuration]
   required_for: [pre_deployment_end]
   parameters:
-    cmd: ln -sf /etc/fuel/cluster/{CLUSTER_ID}/astute.yaml /etc/astute.yaml
+    cmd: "test -f /etc/fuel/cluster/{CLUSTER_ID}/astute.yaml && ln -sf /etc/fuel/cluster/{CLUSTER_ID}/astute.yaml /etc/astute.yaml || true"
     timeout: 180
 
 - id: update_hosts
